# polymorph

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  QUICKSTART.md  WASM_DETECTION.md
scripts/: install.sh
src/: main.rs  report.rs  utils.rs
src/detectors/: wasm.rs
tests/: wasm_test.rs
